force-app/main/default/objects/Places__c/Places__c.object-meta.xml
<CustomObject>
    <label>Places</label>
    <nameField>
        <label>Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>