force-app/main/default/objects/Places__c/fields/Avalara_ID__c.field-meta.xml
<CustomField>
    <fullName>Avalara_ID__c</fullName>
    <externalId>true</externalId>
    <label>Avalara ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>