force-app/main/default/objects/Places__c/fields/Composite_Address_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Address_Key__c</fullName>
    <label>Composite Address Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>