force-app/main/default/objects/Places__c/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>Google&apos;s formatted address response</description>
    <inlineHelpText>Google&apos;s formatted address response</inlineHelpText>
    <label>Formatted Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>