force-app/main/default/objects/Places__c/fields/Geocoding_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Geocoding Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>