force-app/main/default/objects/Places__c/fields/Geocoding_Error__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Error__c</fullName>
    <label>Geocoding Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>