force-app/main/default/objects/Places__c/fields/Geocoding_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Timestamp__c</fullName>
    <label>Geocoding Timestamp</label>
    <type>DateTime</type>
</CustomField>