force-app/main/default/objects/Places__c/fields/isExpired__c.field-meta.xml
<CustomField>
    <fullName>isExpired__c</fullName>
    <description>I</description>
    <formula>Effective_End_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isExpired</label>
    <type>Checkbox</type>
</CustomField>