force-app/main/default/objects/Places__c/fields/Location_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Location_Coordinates__c</fullName>
    <label>Location Coordinates</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>