force-app/main/default/objects/Places__c/fields/Location_Coordinates_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Coordinates_Latitude__c</fullName>
    <label>Location Coordinates Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>