force-app/main/default/objects/Places__c/fields/Place_Contact__c.field-meta.xml
<CustomField>
    <fullName>Place_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Places</relationshipLabel>
    <relationshipName>Location_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>