force-app/main/default/objects/Places__c/fields/Place_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Place_Contact_Phone__c</fullName>
    <formula>Place_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place Contact Phone</label>
    <type>Text</type>
</CustomField>