force-app/main/default/objects/Places__c/fields/Place_ID__c.field-meta.xml
<CustomField>
    <fullName>Place_ID__c</fullName>
    <description>Google Place ID for future reference</description>
    <inlineHelpText>Google Place ID for future reference</inlineHelpText>
    <label>Place ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>