force-app/main/default/objects/Places__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <label>Public</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>