force-app/main/default/objects/Places__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quotes associated with a Location.</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>