force-app/main/default/objects/Places__c/fields/Street_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_Line_3__c</fullName>
    <label>Street Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>