force-app/main/default/objects/Places__c/fields/Workday_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_ID__c</fullName>
    <externalId>true</externalId>
    <label>Workday ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>