force-app/main/default/objects/Places__c/validationRules/VR_Effective_Date_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Effective_Date_Sequence</fullName>
    <active>true</active>
    <description>Ensures effective end date is after effective start date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Effective_Start_Date__c)),
    NOT(ISBLANK(Effective_End_Date__c)),
    Effective_End_Date__c &lt;= Effective_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Effective_Start_Date__c</errorDisplayField>
    <errorMessage>Effective End Date must be after Effective Start Date</errorMessage>
</ValidationRule>