force-app/main/default/objects/Places__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Legacy_ID__c</columns>
    <columns>Legacy_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>